--- a/src/app/pages/home-page/home-page.html
+++ b/src/app/pages/home-page/home-page.html
@@ -3,10 +3,10 @@
     <div class="movies-grid">
     @for (movie of movies; track movie.id) {
         <div class="movie-card" routerLink="/details/{{ movie.id }}">
-        <img [src]="movie.image" [alt]="movie.title" />
-        <div class="movie-info">
-            <h3>{{ movie.title }}</h3>
-        </div>
+            <img [src]="getMovieImage(movie)" [alt]="movie.title" />
+            <div class="movie-info">
+                <h3>{{ movie.title }}</h3>
+            </div>
         </div>
     }
     </div>
